[package]
name = "wlprobe"
version = "0.0.3"
edition = "2021"

authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
description = "wayland-info but intended for computers rather than humans."
keywords = ["wayland", "cli"]
license = "MIT"
repository = "https://github.com/PolyMeilex/wlprobe"
documentation = "https://docs.rs/wlprobe"

[dependencies]
wayland-client = "0.31"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
